tests(framework): Fix tests